upload ManagedTerminal, Ship, ShippingLine, Trip